# OilOracle

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  ruff.toml
configs/: config.yaml  lag_order_config.json  wfv_classification.json  wfv_config.json  wfv_regression.json
notebooks/: 01_data_diagnostics.ipynb  02_feature_analysis.ipynb  03_experiment_a_regression.ipynb  04_experiment_b_classification.ipynb  05_results_comparison.ipynb  agent_team_demo.ipynb  download_news_data.ipynb  financial_data_retrieval.ipynb  news_dataset_eda.ipynb  oil_prices_eda.ipynb
notebooks/data/processed/: diagnostics_report.json  test_returns.parquet  train_returns.parquet  val_returns.parquet
scripts/: agent_pipeline_demo.py  train_arimagarch.py  train_base.py  train_dlinear.py  train_lightgbm.py  train_nbeats.py  train_patchtst.py  train_random_walk.py  train_tft.py  train_xgboost.py
src/: __init__.py  cli.py  main.py
src/agents/: __init__.py  analyst.py  base.py  bearish.py  bullish.py  graph.py  manager.py  risk.py  trader.py
src/api/: __init__.py  server.py
src/api/endpoints/: __init__.py  decisions.py  market_data.py  ml_signal.py  news.py
src/core/: __init__.py  constants.py  exceptions.py  logger.py
src/environment/: __init__.py  backtest.py  market.py  simulator.py
src/models/: __init__.py  base.py  dl_wrapper.py  ml_models.py  nbeats_model.py  patchtst_model.py  statistical.py  tft_model.py
src/models/llm/: __init__.py  client.py  prompts.py
src/models/ml/: __init__.py  inference.py  train.py
src/pipeline/: __init__.py  config.py  data.py  evaluation.py  models.py  pipeline_analysis.md  reporting.py  validation.py
src/pipelines/: __init__.py  config.py  data_pipeline.py  etl.py  evaluation_pipeline.py  feature_pipeline.py  training.py  wfv_orchestrator.py
src/tools/: __init__.py  db.py  news_parser.py  social_parser.py  ts_analyzer.py
