[project]
name = "oiloracle"
version = "0.1.0"
description = "Trading & ML system with multi-agent architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.6.1",
    "dotenv>=0.9.9",
    "huggingface-hub>=1.6.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pmdarima>=2.1.1",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.16.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.48",
    "tqdm>=4.67.3",
    "yfinance>=1.2.0",
    "optuna>=3.5.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "statsmodels>=0.14.0",
    "uvicorn>=0.30.0",
    "unicorn>=2.1.4",
    "loguru>=0.7.3",
    "plotly>=6.6.0",
    "nbformat>=5.10.4",
    "shap>=0.51.0",
    "neuralforecast>=3.1.5",
    "ipywidgets>=8.1.8",
    "arch>=8.0.0",
]

[project.scripts]
bachelor = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-allowed-names = ["display"]
select = ["E", "F", "I", "N", "W"]
